--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 # Page settings
 
-baseurl = "https://upbeat-clarke-6aa193.netlify.com/"
+baseurl = "https://markussommerfeld-cv.netlify.com/"
 languageCode = "en-us"
 title = "John Doe Resume"
 theme = "hugo-orbit-theme"
