Revert "Update config.toml"
This reverts commit 0f3e4f54cf50a848492551a0e5a4f565b940e969.

--- a/config.toml
+++ b/config.toml
@@ -95,20 +95,16 @@ disable404 = true
         title = "Languages"
 
         [[params.language.list]]
-        language = "German"
+        language = "English"
         level = "Native"
 
         [[params.language.list]]
-        language = "English"
+        language = "French"
         level = "Professional"
 
         [[params.language.list]]
-        language = "Japanese"
-        level = "Intermediate"
-		
-        [[params.language.list]]
-        language = "French"
-        level = "Intermediate"
+        language = "Russian"
+        level = "Professional"
 
     # Interests section
     [params.interests]
