--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@
 baseurl = "https://markussommerfeld-cv.netlify.com/"
 languageCode = "en-us"
 title = "Markus Sommerfeld Resume"
-theme = "hugo-orbit-theme"
+theme = "hugo-orbit-theme_modified"
 googleAnalytics = "UA-XXXXXXX-Y"
 
 # Do not build files for websites. Need them? Set to false
