--- a/config.toml
+++ b/config.toml
@@ -194,7 +194,7 @@ disable404 = true
 	# Publication section
     [params.publications]
 	enable = true
-	icon = "fa-file-alt"
+	icon = "fa-newspaper-o"
 	title = "Publications"
 	intro = "**You can list your side projects or open source libraries in this section.** Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus"
    
