--- a/config.toml
+++ b/config.toml
@@ -146,7 +146,7 @@ disable404 = true
         enable = true
         icon = "fa-user"
         title = "Career Profile"
-        summary = ""
+        summary = "In my PhD research at the University of Victoria, Canada I determine the wind energy potential of tall wind turbines and innovative new airborne wind energy systems. Through collaboration with international research institutes, universities and companies I developed competence in LiDAR measurement technologies, wind modeling, optimization and data analysis. I acquired technical certification and testing experience according to international standards through work experiences in Japan and Germany. I am competent in tackling administrative tasks and work efficiently in multicultural teams to achieve scientific excellence and client satisfaction."
 
     # Experiences section
     [params.experiences]
@@ -158,7 +158,7 @@ disable404 = true
         position = "PhD"
         dates = "2015 - 2020"
         company = "University of Victoria, BC Canada"
-        details = "In my PhD research at the University of Victoria, Canada I determine the wind energy potential of tall wind turbines and innovative new airborne wind energy systems. Through collaboration with international research institutes, universities and companies I developed competence in LiDAR measurement technologies, wind modeling, optimization and data analysis. I acquired technical certification and testing experience according to international standards through work experiences in Japan and Germany. I am competent in tackling administrative tasks and work efficiently in multicultural teams to achieve scientific excellence and client satisfaction."
+        details = ""
 
         [[params.jobs.list]]
         position = "Senior Software Engineer"
