--- a/config.toml
+++ b/config.toml
@@ -76,7 +76,7 @@ disable404 = true
 		
 		[[params.contact.list]]
         class = "researchgate"
-        icon = "ai-researchgate"
+        icon = "ai ai-google-scholar-square ai-3x"
         url = "https://www.researchgate.net/profile/Markus_Sommerfeld"
         title = "https://www.researchgate.net/profile/Markus_Sommerfeld"
 		
