--- a/config.toml
+++ b/config.toml
@@ -31,7 +31,7 @@ disable404 = true
     # Profile section
     [params.profile]
         name = "Markus Sommerfeld"
-        tagline = "Futurist and Engineer"
+        tagline = "Father, Researcher and Engineer"
         avatar = "profile.png"
 
     # Contact section
