--- a/config.toml
+++ b/config.toml
@@ -23,7 +23,7 @@ disable404 = true
     # "styles.css", "styles-2.css", "styles-3.css", "styles-4.css", "styles-5.css", "styles-6.css"
     # are available. Also the source LESS files are included so
     # it’s quick and easy to change the styling and colour scheme.
-
+    
     styles = "styles.css"
 
 # Sidebar sections
@@ -33,209 +33,213 @@ disable404 = true
         name = "Markus Sommerfeld"
         tagline = "Researcher, Engineer and Father"
         avatar = "profile.png"
-
+    
     # Contact section
     [params.contact]
         enable = true
-
+    
         [[params.contact.list]]
         class = "email"
         icon = "fa-envelope"
         url = "mailto: msommerf@uvic.ca"
         title = "msommerf@uvic.ca"
-
+    
         [[params.contact.list]]
         class = "phone"
         icon = "fa-phone"
         url = "tel:+1234567890"
         title = "+1234567890"
-
+    
         [[params.contact.list]]
         class = "website"
         icon = "fa-globe"
         url = "https://markussommerfeld-academic.netlify.com/"
         title = "markussommerfeld-academic.com"
-
+    
         [[params.contact.list]]
         class = "linkedin"
         icon = "fa-linkedin"
         url = "https://www.linkedin.com/in/markus-sommerfeld/"
         title = "markus-sommerfeld/"
-
+    
         [[params.contact.list]]
         class = "github"
         icon = "fa-github"
         url = "https://github.com/markussommerfeld"
         title = "markussommerfeld"
-
+    
         [[params.contact.list]]
         class = "twitter"
         icon = "fa-twitter"
         url = "https://twitter.com/Dudegoesplaces"
         title = "@Dudegoesplaces"
-		
-		[[params.contact.list]]
+    	
+    	[[params.contact.list]]
         class = "researchgate"
         icon = "ai ai-researchgate ai-3x"
         url = "https://www.researchgate.net/profile/Markus_Sommerfeld"
         title = "Markus_Sommerfeld"
-		
-		 
+
+
+​		 
 
     # Education section
     [params.education]
         enable = true
         title = "Education"
-
-		[[params.education.list]]
+    
+    	[[params.education.list]]
         degree = "PhD in Mechanical Engineering"
         college = "University of Victoria, BC Canada"
         dates = "2015 - 2020"
-		
+    	
         [[params.education.list]]
         degree = "Dipl.-Ing. in Mechanical Engineering"
         college = "Technical University Kaiserslautern, Germany"
         dates = "2008 - 2014"
-		
+    	
         [[params.education.list]]
         degree = "Abitur"
         college = "Paul Schneider Gymnasium, Meisenheim, Germany"
         dates = "1997 - 2007"
-
+    
     # Languages section
     #[params.language]
     #   enable = true
-	#       title = "Languages"
-	#
+    #       title = "Languages"
+    #
     #    [[params.language.list]]
     #    language = "German"
     #    level = "5"
-
+    
     #    [[params.language.list]]
     #    language = "English"
     #    level = "4"
-
+    
     #    [[params.language.list]]
     #    language = "Japanese"
     #    level = "2"
-
+    
     #    [[params.language.list]]
     #    language = "French"
     #    level = "2"
-
+    
     # Interests section
     [params.interests]
         enable = true
         title = "Interests"
-
+    
         [[params.interests.list]]
         interest = "Crossfit"
-
+    
         [[params.interests.list]]
         interest = "Technology"
-
+    
         [[params.interests.list]]
         interest = "Cooking & Eating"
-		
+
 
 # Main body sections
 
     # You may use markdown in summary, details and intro fields. But don't overdose, it's resume!:)
-
+    
     # Summary section
     [params.summary]
         enable = true
         icon = "fa-user"
         title = "Career Profile"
-        summary = ""
+        summary = "Researcher, Engineer and Futurist driven by curiosity, motivated by improving quality of life for everybody and exited about technology.
+        As a researcher I aim to reduce the impact of climate change through offering consistent, sustainable energy at a lower cost. As an engineer I took responsibility organizing and executing certification test as well as independently solving interesting design challenges to quickly provide outstanding results.As a futurist I am hopeful that we will be able to overcome our challenges by providing better, sustainable services while improving the quality of life for everyone. 
+    "
 	# I acquired technical certification and testing experience through work in Japan and Germany. I am competent at handling administrative tasks and work efficiently in multicultural teams.
-	
+
     # Experiences section
     [params.experiences]
         enable = true
         icon = "fa-briefcase"
         title = "Experiences"
-
+    
         [[params.jobs.list]]
         position = "PhD"
         dates = "2015 - 2020"
         company = "University of Victoria, BC Canada"
         details = "In my PhD research at the University of Victoria I determined the wind energy potential of tall wind turbines and innovative, new airborne wind energy systems. Through collaborations with international research institutes, universities and companies I developed competence in LiDAR technologies, wind modeling, optimization and data analysis."
-
+    
         [[params.jobs.list]]
         position = "Research Assistant"
         dates = "2015"
         company = "Fraunhofer IWES, Bremerhaven Germany"
         details = "I continued working on the 'BladeMaker' project, after finishing my master thesis at IWES. My research contributed to the development of an automated wind turbine blade manufacturing process which reduces the manufacturing costs by over 10% while providing consistantly high quality."
-
+    
        [[params.jobs.list]]
         position = "Graduate Intern"
         dates = "2012"
         company = "Airbus Operations, Hamburg Germany"
         details = "As an intern at the Structures Test center of Airbus I was responsible for planning, scheduling, executing and analyzing certification experiments. I carried out various component tests on CFRP A350 fuselage parts and repair patches. Additionally, I developed and designed the A400M roller system test rig."
-
+    
       [[params.jobs.list]]
         position = "Graduate Intern"
         dates = "2013 - 2014"
         company = "TÜV Rheinland, Yokohama Japan"
         details = "Together with a team of Japanese and international experts I tested and certified photovoltaic modules at the Solar Energy Assessment Center of TÜV Rheinland Japan. We consulted local customers durng the planning phase of large scale solar power plants. I was responsible for calculatng the annual energy yield and independently developed an uncertainty estimation to improve revenue predictions."
-
+    
         [[params.jobs.list]]
         position = " Grad student representative"
         dates = "2016 - 2017"
         company = "University of  Victoria, Canada"
         details = "**Describe your role here** Organizational and finance committee experience"
-
+    
     # Projects section
     [params.projects]
         enable = true
         icon = "fa-archive"
         title = "Projects"
         intro = "**You can list your side projects or open source libraries in this section.** Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus"
-
+    
         [[params.projects.list]]
         title = "Master Thesis"
         url = ""
         tagline = "Diploma thesis at the Fraunhofer Institute for Wind Energy & Energy System Technology: Design of a Roving impregnation device and determination of optimal process parameters for automated manufacturing (grade: 1.0)"
-
+    
         [[params.projects.list]]
         title = "Teaching Assistant"
         url = ""
         tagline = "Wind Energy, 2x Fluids lab, design cap stone project."
-
+    
         [[params.projects.list]]
         title = "Entrpreneurship Playground"
         url = "https://github.com/aerohub/hugo-identity-theme"
         tagline = "Event organizer"
-
+    
         [[params.projects.list]]
         title = "Orbit"
         url = "https://github.com/aerohub/hugo-orbit-theme"
         tagline = "Hugo Resume/CV Theme for Developers."
-
+    
         [[params.projects.list]]
         title = "Me"
         url = "https://github.com/aerohub/hugo-me-theme"
         tagline = "A simple responsive Hugo theme for personal site."
- 
-	# Publication section
+     
+    # Publication section
     [params.publications]
-	enable = true
-	icon = "fa-newspaper-o"
-	title = "Publications"
-	intro = ""
-	
-	[[params.publications.list]]
-	title = "Parametric AWES Sizing Study Using Mesoscale Wind Profiles"
-	url = "https://doi.org/10.4233/uuid:57fd203c-e069-11e9-9fcb-441ea15f7c9c"
-	tagline = "Airborne Wind Energy Conference 2019"
-
-	[[params.publications.list]]
-	title = "Coupled Kite-Ground Station Simulink Model for Optimal FlightPath Following Assessment"
-	url = "https://doi.org/10.4233/uuid:57fd203c-e069-11e9-9fcb-441ea15f7c9c"
-	tagline = "Airborne Wind Energy Conference 2019"
+    enable = true
+    icon = "fa-newspaper-o"
+    title = "Publications"
+    intro = ""
+    
+    [[params.publications.list]]
+    title = "Parametric AWES Sizing Study Using Mesoscale Wind Profiles"
+    url = "https://doi.org/10.4233/uuid:57fd203c-e069-11e9-9fcb-441ea15f7c9c"
+    tagline = "Airborne Wind Energy Conference 2019"
+    
+    [[params.publications.list]]
+    title = "Coupled Kite-Ground Station Simulink Model for Optimal FlightPath Following Assessment"
+    url = "https://doi.org/10.4233/uuid:57fd203c-e069-11e9-9fcb-441ea15f7c9c"
+    tagline = "Airborne Wind Energy Conference 2019"
 
    
+
    [[params.publications.list]]
 	title = "Improving mesoscale wind speed forecasts using lidar-based observation nudging for airborne wind energy systems"
 	url = "https://doi.org/10.5194/wes-4-563-2019"
@@ -245,72 +249,72 @@ disable404 = true
 	title = "LiDAR-based characterization of mid-altitude wind conditions for airborne wind energy systems"
 	url = "https://doi.org/10.1002/we.2343"
 	tagline = "Wiley Wind Energy: Volume22, Issue8, August 2019"
-
+	
 	[[params.publications.list]]
 	title = "High Altitude LiDAR Measurements of the Wind Conditions for Airborne Wind Energy Systems"
 	url = "http://www.awec2017.com/presentations/markus-sommerfeld"
 	tagline = "Airborne Wind Energy Conference 2017"
-
+	
 	[[params.publications.list]]
 	title = "LES generated turbulent inflow fields from mesoscale modeling driven by LiDAR measurements"
 	url = "http://www.awec2017.com/presentations/markus-sommerfeld-2"
 	tagline = "Airborne Wind Energy Conference 2017"
-
+	
 	[[params.publications.list]]
 	title = "AWESome potential: Airborne wind energy’s opportunities and challenges"
 	url = "https://youtu.be/UiriQHZMcs0"
 	tagline = "Pacific Institute for Climate Solutions, March 2018"
 	
 	# Presentation section
-    #[params.presentations]
+	#[params.presentations]
 	#enable = true
 	#icon = "fa-presentation"
 	#title = "Presentations"
 	#intro = "**You can list your side projects or open source libraries in this section.** Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus"
 	#
-    #[[params.presentations.list]]
-    #    title = "Hugrid"
-    #    url = "https://github.com/aerohub/hugrid"
-    #    tagline = "Grid theme for Hugo. It's a kind of boilerplate to perform anyone or anything quickly. Portfolio, collection, bookmarks, contacts and so on"
-
-    # Skills section
-    [params.skills]
-        enable = true
-        icon = "fa-rocket"
-        title = "Skills & Proficiency"
-
-        [[params.skills.list]]
-        skill = "Python & Matlab"
-        level = "90%"
-                
-        [[params.skills.list]]
-        skill = "CAD software: Catia, Solid Edge "
-        level = "70%"
-
-        [[params.skills.list]]
-        skill = "CFD: ANSYS Fluent"
-        level = "80%"
-
-        [[params.skills.list]]
-        skill = "Mesoscale weather modeling: WRF"
-        level = "80%"
-
-        [[params.skills.list]]
-        skill = "Ruby on Rails"
-        level = "75%"
-
-        [[params.skills.list]]
-        skill = "Sketch & Photoshop"
-        level = "60%"
-
-    # Footer section
-
-    # The original template is released under the Creative Commons Attribution 3.0 License.
-    # Please keep the original attribution link when using for your own project.
-    # If you'd like to use the template without the attribution,
-    # you can check out other license options via template author's website: themes.3rdwavemedia.com
-    # 
-    # As for Hugo port you may rewrite the "Ported for..." line with setting your name below.
-
-    [params.footer]
-        copyright = ""
+	#[[params.presentations.list]]
+	#    title = "Hugrid"
+	#    url = "https://github.com/aerohub/hugrid"
+	#    tagline = "Grid theme for Hugo. It's a kind of boilerplate to perform anyone or anything quickly. Portfolio, collection, bookmarks, contacts and so on"
+	
+	# Skills section
+	[params.skills]
+	    enable = true
+	    icon = "fa-rocket"
+	    title = "Skills & Proficiency"
+	
+	    [[params.skills.list]]
+	    skill = "Python & Matlab"
+	    level = "90%"
+	            
+	    [[params.skills.list]]
+	    skill = "CAD software: Catia, Solid Edge "
+	    level = "70%"
+	
+	    [[params.skills.list]]
+	    skill = "CFD: ANSYS Fluent"
+	    level = "80%"
+	
+	    [[params.skills.list]]
+	    skill = "Mesoscale weather modeling: WRF"
+	    level = "80%"
+	
+	    [[params.skills.list]]
+	    skill = "Ruby on Rails"
+	    level = "75%"
+	
+	    [[params.skills.list]]
+	    skill = "Sketch & Photoshop"
+	    level = "60%"
+	
+	# Footer section
+	
+	# The original template is released under the Creative Commons Attribution 3.0 License.
+	# Please keep the original attribution link when using for your own project.
+	# If you'd like to use the template without the attribution,
+	# you can check out other license options via template author's website: themes.3rdwavemedia.com
+	# 
+	# As for Hugo port you may rewrite the "Ported for..." line with setting your name below.
+	
+	[params.footer]
+	    copyright = ""
