--- a/config.toml
+++ b/config.toml
@@ -148,9 +148,9 @@ disable404 = true
     enable = true
     icon = "fa-user"
     title = "Career Profile"
-    summary = "Researcher, Engineer and Futurist driven by curiosity, motivated by improving quality of life for everybody and exited about technology."    
+    summary = "TEST"    
 
-# As a researcher I aim to reduce the impact of climate change through offering consistent, sustainable energy at a lower cost. As an engineer I took responsibility organizing and executing certification test as well as independently solving interesting design challenges to quickly provide outstanding results.As a futurist I am hopeful that we will be able to overcome our challenges by providing better, sustainable services while improving the quality of life for everyone."
+# Researcher, Engineer and Futurist driven by curiosity, motivated by improving quality of life for everybody and exited about technology. As a researcher I aim to reduce the impact of climate change through offering consistent, sustainable energy at a lower cost. As an engineer I took responsibility organizing and executing certification test as well as independently solving interesting design challenges to quickly provide outstanding results.As a futurist I am hopeful that we will be able to overcome our challenges by providing better, sustainable services while improving the quality of life for everyone."
 
 	# I acquired technical certification and testing experience through work in Japan and Germany. I am competent at handling administrative tasks and work efficiently in multicultural teams.
 
