--- a/config.toml
+++ b/config.toml
@@ -147,8 +147,8 @@ disable404 = true
 [params.summary]
     enable = true
     icon = "fa-user"
-    title = "Career Profile"
-    summary = "TEST"    
+    title = "Career Profile bla bla"
+    summary = ""    
 
 # Researcher, Engineer and Futurist driven by curiosity, motivated by improving quality of life for everybody and exited about technology. As a researcher I aim to reduce the impact of climate change through offering consistent, sustainable energy at a lower cost. As an engineer I took responsibility organizing and executing certification test as well as independently solving interesting design challenges to quickly provide outstanding results.As a futurist I am hopeful that we will be able to overcome our challenges by providing better, sustainable services while improving the quality of life for everyone."
 
